Replace some String.format() calls with formatted()